# programming-massively-processors-code-demo

./: .gitignore  CMakeLists.txt  README.md
chapter-2/: CMakeLists.txt  kernel_add.cu
chapter-3/: CMakeLists.txt
chapter-3/3-2-image-gray/: CMakeLists.txt  image-gray.cu
chapter-3/3-3-image-blur/: CMakeLists.txt  image-blur.cu
include/: common.h
